# minos

./: LICENSE  README.md  atomic_update_file.c  atomic_update_file.h  client.c  client.conf  common.c  common.h  memleak.c  meson.build  minos.conf  nss.c  preload.c  server.c  server.conf  wgenerate.py
.github/workflows/: package.yml
etc/: minos.conf
packaging/archlinux/: PKGBUILD
proto/: minos.proto
src/: client.cc  config.h.in  configuration.cc  configuration.h  deserialize.cc  deserialize.h  libnss_minos.cc  minos.x  minos_client.cc  minos_server.cc  minosd.cc  serialize.cc  serialize.h  server.cc  server.h
systemd/: minos-client.service  minos-server.service
test/: test_configuration.cc  test_libnss_minos.cc  test_minos.conf  test_minosd.cc  test_roundtrip.cc
tools/: rpcwrap.py
